crates/djls-templates/src/snapshots/djls_templates__parser__tests__whitespace__parse_with_leading_whitespace.snap
---
source: crates/djls-templates/src/parser.rs
expression: nodelist
---
nodelist:
  - Text:
      content: hello
      span:
        start: 5
        length: 5
line_offsets:
  - 0
