crates/djls-templates/src/snapshots/djls_templates__parser__tests__whitespace__parse_with_leading_whitespace_newline.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_ast
---
nodelist:
  - type: Text
    span:
      - 1
      - 10
line_offsets:
  - 0
  - 1
