crates/djls-templates/src/snapshots/djls_templates__parser__tests__whitespace__parse_with_trailing_whitespace_newline.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_ast
---
nodelist:
  - type: Text
    span:
      - 0
      - 11
line_offsets:
  - 0
  - 11
